REmove unnecessary dots

--- a/docker/main/Dockerfile
+++ b/docker/main/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3-slim
 
 # Configurations used in the 'MessageService'
 ENV RABBITMQ_HOST=mov-mq
-ENV RABBITMQ_PORT=5672.
-ENV RABBITMQ_USERNAME=mov.
+ENV RABBITMQ_PORT=5672
+ENV RABBITMQ_USERNAME=mov
 ENV RABBITMQ_PASSWORD=password
 ENV RABBITMQ_MAX_RETRIES=100
 ENV RABBITMQ_RETRY_SLEEP=3
